src/objects/RARE_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>CT_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Mongo DB Unique Id</inlineHelpText>
        <label>CT Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CT_Updated_Date__c</fullName>
        <inlineHelpText>Updated Date from Campaign Tracker</inlineHelpText>
        <label>CT Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Theme__c</fullName>
        <description>Campaign&apos;s theme according to the Master Campaign List</description>
        <label>Campaign Theme</label>
        <picklist>
            <picklistValues>
                <fullName>Fish Forever</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nonthematic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainable Fisheries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watershed Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wetlands Protection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_Milestones__c</fullName>
        <label>Completed Milestones</label>
        <summaryFilterItems>
            <field>Milestone__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Milestone__c.RARE_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country2__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camaroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cayman Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chuuk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Democratic Republic of the Congo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecuador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federation of Saint Kitts and Nevis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gabon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grenada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guatemala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honduras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jamaica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kosrae</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lao People&apos;s Democratic Republic (Lao PDR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madagascar</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Grade__c</fullName>
        <label>Current Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Scorecard_VaLUE__c</fullName>
        <inlineHelpText>Based on most recent scorecard value</inlineHelpText>
        <label>Current Scorecard Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fellows__c</fullName>
        <label>Fellows</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fish_Forever__c</fullName>
        <defaultValue>false</defaultValue>
        <description>need to understand what exactly the boolean is doing...</description>
        <label>Fish Forever</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Resource__c</fullName>
        <formula>IMAGE(Image_URL__c, &quot;No Image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Resource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Milestones_Complete__c</fullName>
        <formula>Completed_Milestones__c  / Total_Milestones__c</formula>
        <label>% Milestones Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <description>Mission name</description>
        <label>Mission</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OK_Update__c</fullName>
        <formula>IF ( DATEVALUE(LastModifiedDate) &gt;= CT_Updated_Date__c, &quot;Yes&quot;, &quot;No&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OK Update</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_PPM__c</fullName>
        <description>Primary Pride Program Manager (will be a lookup in production)</description>
        <inlineHelpText>Who is this campaign&apos;s PPM? (Last, First)</inlineHelpText>
        <label>Primary PPM</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Managers__c</fullName>
        <label>Program Managers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>RARE_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <description>Are project codes predetermined or a la carte?</description>
        <label>Project Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Location__c</fullName>
        <inlineHelpText>Location of Project in Campaign Tracker</inlineHelpText>
        <label>Project Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Rare_Region__c</fullName>
        <label>Rare Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <picklist>
            <picklistValues>
                <fullName>Sustainable Fisheries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watershed Protection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start date for a campaign</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <description>The start year of the campaign</description>
        <label>Start Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>IMPLEMENTATION</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>COMPLETE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANCELLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INCOMPLETE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARTNERS WITHDREW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_Milestones__c</fullName>
        <label>Total Milestones</label>
        <summaryForeignKey>Milestone__c.RARE_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Rare Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Program__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CT_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Rare Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rare Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>